Way too many random updates.

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -34,7 +34,7 @@
     "editor:insert-link",
     "editor:toggle-blockquote"
   ],
-  "fileSortOrder": "byModifiedTime",
+  "fileSortOrder": "alphabeticalReverse",
   "showUnsupportedFiles": true,
   "lineWrap": true,
   "attachmentFolderPath": "700 Vaults/Resources"
