--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -37,5 +37,6 @@
   "fileSortOrder": "alphabeticalReverse",
   "showUnsupportedFiles": true,
   "lineWrap": true,
-  "attachmentFolderPath": "700 Vaults/Resources"
+  "attachmentFolderPath": "700 Vaults/Resources",
+  "showInlineTitle": false
 }
