Mass update of luxion usage after dataview patch.
https://github.com/blacksmithgu/obsidian-dataview/issues/1769#issuecomment-1399647016
Thanks @totallyGreg for pointing this out.

Various small improvements mixed in.

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,11 +1,11 @@
 {
-  "baseFontSize": 22,
+  "baseFontSize": 20,
   "translucency": false,
   "cssTheme": "",
   "enabledCssSnippets": [
-    "CommandCenter",
     "obsidian.css.live-preview.list-rainbow-indents",
-    "dashboard"
+    "CommandCenter",
+    "GutterFix"
   ],
   "accentColor": ""
 }
